--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <script src="javascripts/app.js"></script>
 </head>
 <body>
-
+	<div>
+		<label> Insert commands: </label>
+		<input id="comand" type="text" />
+		<button id="env_comand" type="submit"> Send </button>
+	</div>
 </body>
 </html>
